tests.yml: don't update legacy macOS platform for tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -211,7 +211,7 @@ jobs:
           - arch: arm64
             platform: macos-14
     runs-on: ${{ matrix.platform }}
-    timeout-minutes: ${{ matrix.platform == 'macos-14' && 15 || 30 }}
+    timeout-minutes: 15
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -225,7 +225,7 @@ jobs:
           brew install --overwrite python@3.12
           python3.12 -m venv venv
 
-      - if: ${{ matrix.platform == 'macos-14' }}
+      - if: ${{ matrix.platform != 'macos-12' }}
         name: Run brew update
         run: brew update
 
