Update application description for clarity (#3615)
Do a better job at explaining what Nicotine+ does.

--- a/data/org.nicotine_plus.Nicotine.appdata.xml.in
+++ b/data/org.nicotine_plus.Nicotine.appdata.xml.in
@@ -12,13 +12,13 @@
   <summary>Browse the Soulseek network</summary>
   <description>
     <p>
-      Nicotine+ is a graphical client for the Soulseek peer-to-peer
-      network.
+      Nicotine+ is a graphical client for the Soulseek peer-to-peer network.
     </p>
     <p>
-      Nicotine+ aims to be a lightweight, pleasant, free and open
-      source (FOSS) alternative to the official Soulseek client, while
-      also providing a comprehensive set of features.
+      Share files, chat, and find people with similar interests. Nicotine+
+      is user-friendly, fast, free, and open source. It provides features
+      and refinements that focus on usability, while remaining fully
+      compatible with other Soulseek clients.
     </p>
   </description>
   <branding>
