--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,12 @@ version = attr: pynicotine.__version__
 license = GPLv3+
 description = Graphical client for the Soulseek peer-to-peer network
 long_description =
-    Nicotine+ is a graphical client for the Soulseek peer-to-peer
-    network.
+    Nicotine+ is a graphical client for the Soulseek peer-to-peer network.
 
-    Nicotine+ aims to be a lightweight, pleasant, free and open
-    source (FOSS) alternative to the official Soulseek client, while
-    also providing a comprehensive set of features.
+    Share files, chat, and find people with similar interests. Nicotine+
+    is user-friendly, fast, free, and open source. It provides features
+    and refinements that focus on usability, while remaining fully
+    compatible with other Soulseek clients.
 author = Nicotine+ Team
 author_email = nicotine-team@lists.launchpad.net
 url = https://nicotine-plus.org
